<resources>
    <string name="app_name">Lock Screen</string>
    <string name="re_enter_new_pattern">Re-enter New Pattern</string>
    <string name="enter_new_pattern">Enter New Pattern</string>
    <string name="set_pattern">Set Pattern</string>
    <string name="enter_password">Enter Password</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="switch_to_pin_lock">Switch To Pin Lock</string>
    <string name="change_pattern">Change Pattern</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="enable_lock_screen">Enable Lock Screen</string>
    <string name="switch_to_pattern_lock">Switch To Pattern Lock</string>
    <string name="change_pin">Change Pin</string>
</resources>
