<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.PinLock.MainActivityPin">


<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:titleTextColor="@android:color/white"-->
<!--        android:background="?attr/colorPrimary">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Lock Screen"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="21sp"-->
<!--            />-->

<!--    </androidx.appcompat.widget.Toolbar>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="13dp"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/lock_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_lock_screen"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            />

        <Switch
            android:id="@+id/enable_pinlock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:id="@+id/switch_to_pattern_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="13dp"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/pin_lock_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_to_pattern_lock"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            />



    </LinearLayout>


    <LinearLayout
        android:id="@+id/change_pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"/>


        <LinearLayout
            android:id="@+id/redirect_reset_pin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="13dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/key_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_pin"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                />



        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>



    <LinearLayout
        android:id="@+id/change_wallpaper_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="13dp"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/wallpaper_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_wallpaper"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/change_wallpaper_gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="13dp"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/gallery_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_from_gallery"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:textSize="21sp"
            android:layout_marginLeft="20dp"
            />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>



</LinearLayout>